@@ -238,6 +238,38 @@ namespace tgui
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Changes how much the value changes when scrolling or pressing one of the arrows of the vertical scrollbar
+        ///
+        /// @param scrollAmount  How far should the vertical scrollbar scroll when an arrow is clicked?
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void setVerticalScrollAmount(unsigned int scrollAmount);
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns how much the value changes when scrolling or pressing one of the arrows of the vertical scrollbar
+        ///
+        /// @return How far should the vertical scrollbar scroll when an arrow is clicked?
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        unsigned int getVerticalScrollAmount() const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Changes how much the value changes when scrolling or pressing one of the arrows of the horizontal scrollbar
+        ///
+        /// @param scrollAmount  How far should the horizontal scrollbar scroll when an arrow is clicked?
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void setHorizontalScrollAmount(unsigned int scrollAmount);
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns how much the value changes when scrolling or pressing one of the arrows of the horizontal scrollbar
+        ///
+        /// @return How far should the horizontal scrollbar scroll when an arrow is clicked?
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        unsigned int getHorizontalScrollAmount() const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @internal
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         void leftMousePressed(Vector2f pos) override;
@@ -356,6 +388,9 @@ namespace tgui
 
         Scrollbar::Policy m_verticalScrollbarPolicy = Scrollbar::Policy::Automatic;
         Scrollbar::Policy m_horizontalScrollbarPolicy = Scrollbar::Policy::Automatic;
+
+        unsigned int m_verticalScrollAmount = 0;
+        unsigned int m_horizontalScrollAmount = 0;
 
         std::map<Widget::Ptr, unsigned int> m_connectedCallbacks;
 
